Only add keys a ConfigSection actually has when updating a table.